Redesign of wishlist blueprints